--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,20 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+:root {
+    --font-open-sans: "Open Sans", sans-serif;
+}
+
+body {
+    font-family: var(--font-open-sans);
+}
+
 @layer components {
     .containers {
         @apply max-w-3xl xl:max-w-5xl mx-auto;
     }
     .padding-both {
-        @apply py-20 md:py-12 px-6;
+        @apply md:py-20 md:py-12 px-6;
     }
     .nav-space {
         @apply mt-12;
